--- a/infrastructure/Jenkinsfile
+++ b/infrastructure/Jenkinsfile
@@ -22,8 +22,16 @@ pipeline {
             MINOR_VERSION = sh(script: 'git tag | cut -d . -f 2', returnStdout: true).trim()
             PATCH_VERSION = sh(script: 'git tag | cut -d . -f 3', returnStdout: true).trim()
         }
-        sh "docker build -t nicoletaiova25/hello-img:${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION} ."
+        sh "docker build -t nicoletaiova258/hello-img:${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION} ."
     }
 }
+
+stage('Push image') {
+    steps {
+        withCredentials([usernamePassword(credentialsId: 'docker_password', passwordVariable: 'DOCKER_PASSWORD', usernameVariable: 'DOCKER_USERNAME')]) {
+            sh 'echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin'
+            sh "docker push nicoletaiova258/hello-img:${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION}"
+        }
+    }
 
 }
