--- a/infrastructure/Jenkinsfile
+++ b/infrastructure/Jenkinsfile
@@ -6,33 +6,32 @@ pipeline {
     environment {
         DOCKER_PASSWORD = credentials("docker_password")
     }
-
     stages {
         stage('Build & Test') {
             steps {
                 sh './gradlew clean build'
             }
         }
-    }
-    stage('Tag image') {
-    steps {
-        script {
-            GIT_TAG = sh(script: 'git fetch --tag && git tag', returnStdout: true).trim()
-            MAJOR_VERSION = sh(script: 'git tag | cut -d . -f 1', returnStdout: true).trim()
-            MINOR_VERSION = sh(script: 'git tag | cut -d . -f 2', returnStdout: true).trim()
-            PATCH_VERSION = sh(script: 'git tag | cut -d . -f 3', returnStdout: true).trim()
+        
+        stage('Tag image') {
+            steps {
+                script {
+                    GIT_TAG = sh(script: 'git fetch --tag && git tag', returnStdout: true).trim()
+                    MAJOR_VERSION = sh(script: 'git tag | cut -d . -f 1', returnStdout: true).trim()
+                    MINOR_VERSION = sh(script: 'git tag | cut -d . -f 2', returnStdout: true).trim()
+                    PATCH_VERSION = sh(script: 'git tag | cut -d . -f 3', returnStdout: true).trim()
+                }
+                sh "docker build -t nicoletaiova25/hello-img:${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION} ."
+            }
         }
-        sh "docker build -t nicoletaiova25/hello-img:${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION} ."
-    }
-}
-
-stage('Push image') {
-    steps {
-        withCredentials([usernamePassword(credentialsId: 'docker_password', passwordVariable: 'DOCKER_PASSWORD', usernameVariable: 'DOCKER_USERNAME')]) {
-            sh "docker login -u ${DOCKER_USERNAME_USR} -p ${DOCKER_USERNAME_PSD}"
-            sh "docker push nicoletaiova25/hello-img:${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION}"
+        
+        stage('Push image') {
+            steps {
+                withCredentials([usernamePassword(credentialsId: 'docker_password', passwordVariable: 'DOCKER_PASSWORD', usernameVariable: 'DOCKER_USERNAME')]) {
+                    sh "docker login -u ${DOCKER_USERNAME_USR} -p ${DOCKER_PASSWORD_PSD}"
+                    sh "docker push nicoletaiova25/hello-img:${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION}"
+                }
+            }
         }
     }
-
-}
 }
