--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 services:
   hello:
     image: hello-img
-    build: .
     ports:
       - 8080:8080
       # Port for debug
@@ -13,7 +12,7 @@ services:
     profiles:
       - "hello-service"
   jenkins:
-    image: jenkins/jenkins
+    image: anamariacimpi/hello-img:${IMAGE_TAG}
     ports:
       - 8082:8080
       - 50000:50000
@@ -27,6 +26,8 @@ services:
     profiles:
       - "hello-service"
     user: 0:0
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
   mongo:
     image: mongo:6.0.20
     restart: always
