--- a/infrastructure/Jenkinsfile
+++ b/infrastructure/Jenkinsfile
@@ -5,6 +5,7 @@ pipeline {
     }
     environment {
         DOCKER_PASSWORD = credentials("docker_password")
+        GITHUB_TOKEN = credentials("github_token")
     }
     stages {
         stage('Build & Test') {
@@ -16,12 +17,13 @@ pipeline {
         stage('Tag image') {
             steps {
                 script {
-                    GIT_TAG = sh(script: 'git fetch --tag && git tag', returnStdout: true).trim()
-                    MAJOR_VERSION = sh(script: 'git tag | cut -d . -f 1', returnStdout: true).trim()
-                    MINOR_VERSION = sh(script: 'git tag | cut -d . -f 2', returnStdout: true).trim()
-                    PATCH_VERSION = sh(script: 'git tag | cut -d . -f 3', returnStdout: true).trim()
+                sh([script: 'git fetch --tag', returnStdout: true]).trim()
+                env.MAJOR_VERSION = sh([script: 'git tag | sort --version-sort | tail -1 | cut -d . -f 1', returnStdout: true]).trim()
+                env.MINOR_VERSION = sh([script: 'git tag | sort --version-sort | tail -1 | cut -d . -f 2', returnStdout: true]).trim()
+                env.PATCH_VERSION = sh([script: 'git tag | sort --version-sort | tail -1 | cut -d . -f 3', returnStdout: true]).trim()
+                env.IMAGE_TAG = "${env.MAJOR_VERSION}.\$((${env.MINOR_VERSION} + 1)).${env.PATCH_VERSION}"
                 }
-                sh "docker build -t nicoletaiova25/hello-img:${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION} ."
+                sh "docker build -t anamariacimpi/hello-img:${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION} ."
             }
         }
         
@@ -29,8 +31,15 @@ pipeline {
             steps {
                 withCredentials([usernamePassword(credentialsId: 'docker_password', passwordVariable: 'DOCKER_PASSWORD', usernameVariable: 'DOCKER_USERNAME')]) {
                     sh "docker login -u ${DOCKER_PASSWORD_USR} -p ${DOCKER_PASSWORD_PSW}"
-                    sh "docker push nicoletaiova25/hello-img:${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION}"
+                    sh "docker push anamariacimpi/hello-img:${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION}"
+                    sh "git tag ${env.IMAGE_TAG}"
+                    sh "git push https://$GITHUB_TOKEN@github.com/${DOCKER_PASSWORD_USR}/service.git ${env.IMAGE_TAG}"
                 }
+            }
+        }
+        stage('Deploy') {
+            steps {
+                sh "IMAGE_TAG=${env.IMAGE_TAG} docker compose up -d hello mongo"
             }
         }
     }
