--- a/infrastructure/Jenkinsfile
+++ b/infrastructure/Jenkinsfile
@@ -6,6 +6,7 @@ pipeline {
     environment {
         DOCKER_PASSWORD = credentials("docker_password")
         GITHUB_TOKEN = credentials("github_token")
+        REPO_OWNER = "my-team-malibu-production-engineering"
     }
     stages {
         stage('Build & Test') {
@@ -33,8 +34,7 @@ pipeline {
                     sh "docker login -u ${DOCKER_PASSWORD_USR} -p ${DOCKER_PASSWORD_PSW}"
                     sh "docker push anamariacimpi/hello-img:${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION}"
                     sh "git tag ${env.IMAGE_TAG}"
-                    def repoOwner = "my-team-malibu-production-engineering"
-                    sh "git push https://$GITHUB_TOKEN@github.com/${repoOwner}/service.git ${env.IMAGE_TAG}" 
+                    sh "git push https://$GITHUB_TOKEN@github.com/${REPO_OWNER}/service.git ${env.IMAGE_TAG}" 
                 }
             }
         }
